--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>chatbot</title>
-        <link rel="stylesheet" href="main.css" >
+        <link rel="stylesheet" href="main-block.css">
+        <link rel="stylesheet" href="main-left.css">
+        <link rel="stylesheet" href="main-right.css">
     </head>
     <body>
         <div class="main-block">
