--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                         <p>LOGO</p>
                     </div>
                 </div>
-                <div>
-                    <h1>Left</h1>
+                <div class="hello">
+                    <h1 style="padding-bottom: 2000px;">Left</h1>
                 </div>
             </div>
             <div class="main-right">
@@ -31,11 +31,51 @@
                     </div>
                 </div>
                 <div class="main-chat-wrapper">
-                    <div class="main-right-scrollable">
-                        <h1>Right</h1>
-                    </div>
+                    <div class="scroll-wrapper">
+                        <div class="main-right-scrollable">
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+                            <h1>text content text content text content text content text </h1>
+
+                        </div>
+                    </div>    
                     <div class="main-right-input">
-                       <input type="text" placeholder="Type a message..."/>
+                        <input type="text" placeholder="Type a message..."/>
                     </div>
                 </div>
             </div>
